events creation and listing
infinite scroll
csrf protection
event style

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://ici.primal-apps.com" />
     <meta property="og:title" content="ici!® - Sorties et événements près de chez toi" />
     <meta property="og:description" content="Près de chez toi, des sorties et des événements enfin disponibles grâce à la nouvelle application ici!. Proposes toi aussi tes lieux de rendez-vous !" />
-    <meta property="og:image" content="https://www.vox-populi-vs.com/announcement.png" />
+    <meta property="og:image" content="https://ici.primal-apps.com/announcement.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://vox-populi-vs.com" />
-    <meta property="twitter:title" content="Vox Populi - Voting System" />
+    <meta property="twitter:url" content="https://ici.primal-apps.com" />
+    <meta property="twitter:title" content="ici!® - Sorties et événements près de chez toi" />
     <meta property="twitter:description" content="Faites valoir votre voix sur Vox Populi, la plateforme de vote en ligne. Participez à l'équilibre citoyen et créez vos propres sondages." />
-    <meta property="twitter:image" content="https://www.vox-populi-vs.com/announcement.png" />
+    <meta property="twitter:image" content="https://ici.primal-apps.com/announcement.png" />
 
   </head>
   <body>
